--- a/report/references.bib
+++ b/report/references.bib
@@ -19,3 +19,9 @@
     title =        "Bare Metal Programming",
     year =         "2020",
 }
+
+@article{osprogramming,
+    author =       "Terraneo Federico",
+    title =        "OS Programming",
+    year =         "2020",
+}
